Version 0.4 - File Details and Search Highlighting - InProgress
    - Refactor code to use JTable with a custom Table Model that holds FileItem objects
    - Display file details (name, size, last modified) and file thumbnail icons
    - Highlight search result matches as search term is typed using a Custom Table Cell Renderer
    - Toggle search result highlighting with :noh and :hl
    - Handle space and backspace in search mode

Version 0.3 - Basic Search Implementation - 2020-06-07
    - Implement Mode dispay (Normal, Insert, Search, Command) in KeyInfoPanel
    - Implement Search Mode triggered with space, exited with ESC or ENTER
    - Implement highlighting search mathces as search term is typed
    - Implement jumping to prev/next matching items with n/N keys
	- Implement turning search highlighting on/off with :noh

Version 0.2 - Basic Folder Navigation - 2020-05-27
    - Display folders first, then files
    - Pressing Enter on a folder opens the folder
    - Display .. for parent folder
    - Pressing Enter on .. goes up one folder
    - VIM like: "gu" for go up one folder
    - VIM like: "gb" for go back to prev folder
    - VIM like: ":e" for refreshing the panel
    - Start AC from last opened folder

Version 0.1 - Basic File Display and Navigation - 2020-05-24
    - Display files from a directory
        - Highlight the first file
    - Implement VIM like keystroke detection (normal mode)
        - Display last pressed key and pressed keys list
        - Handle single and multiple keystrokes
        - VIM like: be able to move the cursor with "j"/"k"
        - Handle parsing special keys (ESC, Shift, Enter, etc)
        - VIM like: be able to move the cursor to the top/bottom with "gg"/"G"
    - Quit with ":q" ENTER
    - Execute the highlighted file when "Enter" key pressed
    - Scrollpane viewport follows cursor
    - Remap cursor keys toj j/k