@@ -9,6 +9,12 @@ public class Constants {
     public static final String SEARCH_MODE_STARTSWITH = "Starts with";
     public static final String SEARCH_MODE_CONTAINS = "Contains";
 
+    public static final String SORT_ORDER_REVERSED = "\u25b2"; // Up arrow
+    public static final String SORT_ORDER_NORMAL = "\u25bc"; //Down arrow
+    public static final String SORT_BY_NAME = "Sort by name";
+    public static final String SORT_BY_DATE = "Sort by date";
+    public static final String SORT_BY_MODIFIED = "Sort by modified";
+
     public static final int FILEITEM_INDEX=0;
 
 }
