@@ -1,4 +1,4 @@
-VERSION=0.4.5 - JTable Refactor - Reimplementing Search
+VERSION=0.4.6 - Implement column sorting
 STARTFOLDER=
 
 #Last folder = starts the last folder in History
