@@ -1,6 +1,7 @@
 Version 0.4 - File Details and Search Highlighting - InProgress
     - Refactor code to use JTable with a custom Table Model that holds FileItem objects
     - Display file details (name, size, last modified) and file thumbnail icons
+    INPROGRESS- Sortable columns by name, size, last modified date
     - Highlight search result matches as search term is typed using a Custom Table Cell Renderer
     - Toggle search result highlighting with :noh and :hl
     - Handle space and backspace in search mode
